--- a/exercise5.html
+++ b/exercise5.html
@@ -87,7 +87,7 @@
                 <!-- Start of a section -->
                 <!-- Start of image with caption -->
                 <figure>
-                  <img src="exercise5.jpg" width="100%">
+                  <img src="exercise5.JPG" width="100%">
                 </figure>
                 <!-- End of image with caption -->
            
